--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'eclipse'
+apply plugin: 'application'
 sourceSets{  
     main{  
         java{  
@@ -10,13 +11,10 @@ sourceSets{
         }  
     }  
 }
-task taskJar(type:Jar,dependsOn:compileJava){
-     from 'build/classes'  
-    destinationDir = file('build/libs')  
-}
 
-jar{
-    manifest{
-        attributes 'Main-Class':"com.suneony.gatherservice.PackageRecord"
-    }
+repositories{
+    mavenCentral()
+}
+dependencies{
+    
 }
